# Car_Moto_tracking_jetson_nano

detection/c++/: README.md  requirements.txt
detection/c++/inference/: CMakeLists.txt  main.cpp
detection/c++/inference/include/: fff.hpp  yolov8.hpp
detection/deepstream/: README.md
detection/detect/: main.cpp
detection/detect/include/: yolov8.hpp
detection/jetson/: main.cpp
docs/: Jetson.md
track_with_cpp/: README.md  yolov8
track_with_cpp/inference/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  yolov8
track_with_cpp/inference/include/: yolov8.hpp
tracking/bytetrack/: CMakeLists.txt  main.cpp
tracking/bytetrack/include/: BYTETracker.h  common.hpp  util.h  yolov8.hpp
tracking/bytetrack/src/: BYTETracker.cpp  bytetrack.cpp  main.cpp
tracking/bytetrack/ttt/: CMakeCache.txt  Makefile  cmake_install.cmake
tracking/c/: CMakeLists.txt
tracking/c++/: yolov8
tracking/c++/inference/: CMakeLists.txt
tracking/c++/inference/include/: byte_tracker.cpp
tracking/c++/inference/src/: bytetrack.cpp
tracking/c/src/: main.cpp
tracking/deepsort/: CMakeLists.txt  main.cpp
tracking/deepsort/include/: FeatureTensor.h  common.hpp  dataType.h  model.h  yolov8.hpp
tracking/deepsort/src/: FeatureTensor.cpp  hungarianoper.cpp  linear_assignment.cpp  main.cpp  tracker.cpp
tracking/deepsort_2/: CMakeLists.txt  main.cpp
tracking/deepsort_2/include/: common.hpp  dataType.h  model.h
tracking/deepstream/: config_infer_primary_yoloV8.txt  requirements.txt
tracking/opencv/: CMakeLists.txt  main.cpp
tracking/sort/: CMakeLists.txt
tracking/sort (copy)/include/: common.hpp  yolov8.hpp
tracking/sort (copy)/src/: main.cpp
tracking/sort/include/: common.hpp  track.h  tracker.h  yolov8.hpp
tracking/sort/src/: main.cpp  track.cpp  tracker.cpp
train/: README.md
